--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mclustSBIC
-Title: What the Package Does (One Line, Title Case)
+Title: Bayesian Information Criterion for Singular Gaussian Mixture Models (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
