--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: mclustSBIC
-Title: Bayesian Information Criterion for Singular Gaussian Mixture Models (One Line, Title Case)
 Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Date: 2022-01-08
+Title: Bayesian Information Criterion for Singular Gaussian Mixture Models
+Authors@R: c(person("Mathias", "Drton", role = c("aut")),
+             person("Radek", "Salac", role = c("aut"))
+             )
+           
+Description: Extension of BIC for parameterized Gaussian mixture models fitted by EM algorithm initialized by model-based hierarchical clustering. This modifief BIC resolves the problematic of singular model selection problems, i.e. problems that involve models with Fisher information matrices that may fail to be invertable.
+License: GPL (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
